Simplifies stream API calls.