@@ -71,8 +71,8 @@ public class AnalysisService {
     Path folder = configuration.getAnalysis().folder(datasets);
     FileSystemUtils.deleteRecursively(folder);
     Files.createDirectories(folder);
-    Collection<Sample> samples = datasets.stream().flatMap(dataset -> dataset.getSamples().stream())
-        .distinct().collect(Collectors.toList());
+    Collection<Sample> samples =
+        datasets.stream().flatMap(dataset -> dataset.getSamples().stream()).distinct().toList();
     Path samplesFile = folder.resolve("samples.txt");
     LinkedHashSet<String> samplesLines = new LinkedHashSet<>();
     samplesLines.add("#sample");
@@ -81,12 +81,11 @@ public class AnalysisService {
     Path datasetFile = folder.resolve("dataset.txt");
     LinkedHashSet<String> datasetLines = new LinkedHashSet<>();
     datasetLines.add("#merge\tsamples");
-    datasets.forEach(dataset -> datasetLines.add(dataset.getName() + "\t" + dataset.getSamples()
-        .stream().map(Sample::getName).collect(Collectors.joining("\t"))));
+    datasets.forEach(dataset -> datasetLines.add(dataset.getName() + "\t"
+        + dataset.getSamples().stream().map(Sample::getName).collect(Collectors.joining("\t"))));
     Files.write(datasetFile, datasetLines, StandardOpenOption.CREATE);
     List<PathMatcher> pathMatchers = filenamePatterns.stream()
-        .map(pattern -> FileSystems.getDefault().getPathMatcher("glob:" + pattern))
-        .collect(Collectors.toList());
+        .map(pattern -> FileSystems.getDefault().getPathMatcher("glob:" + pattern)).toList();
     Function<List<Path>,
         List<Path>> matchAnyPattern = files -> files.stream()
             .filter(file -> pathMatchers.stream()
@@ -145,8 +144,7 @@ public class AnalysisService {
     samples.forEach(sample -> samplesLines.add(sample.getName()));
     Files.write(samplesFile, samplesLines, StandardOpenOption.CREATE);
     List<PathMatcher> pathMatchers = filenamePatterns.stream()
-        .map(pattern -> FileSystems.getDefault().getPathMatcher("glob:" + pattern))
-        .collect(Collectors.toList());
+        .map(pattern -> FileSystems.getDefault().getPathMatcher("glob:" + pattern)).toList();
     Function<List<Path>,
         List<Path>> matchAnyPattern = files -> files.stream()
             .filter(file -> pathMatchers.stream()
